# polarway

./: .gitignore  .readthedocs.yml  Cargo.toml  Dockerfile  Dockerfile.fast  Dockerfile.optimized  Dockerfile.polarway  Dockerfile.serverless  GITHUB_ISSUES_ANALYSIS.md  Makefile  POLAROID_ARCHITECTURE.md  README.md  README_OLD.md  READTHEDOCS_SETUP.md  RELEASE_NOTES.md  docker-compose.polaroid.yml  start-server.sh  test_phase1.py
.github/workflows/: security.yml
api/python/version/0./: .buildinfo  genindex.html  llms-full.txt  llms.txt  py-modindex.html  search.html
api/python/version/0./reference/: api.html  config.html  datatypes.html  exceptions.html  functions.html  index.html  io.html  metadata.html  plugins.html  selectors.html  testing.html
api/python/version/0./reference/api/: polars.Config.load.html  polars.Config.load_from_file.html  polars.Config.restore_defaults.html  polars.Config.save.html  polars.Config.save_to_file.html  polars.Config.set_ascii_tables.html  polars.Config.set_auto_structify.html  polars.Config.set_decimal_separator.html  polars.Config.set_default_credential_provider.html  polars.Config.set_engine_affinity.html  polars.Config.set_float_precision.html  polars.Config.set_fmt_float.html  polars.Config.set_fmt_str_lengths.html  polars.Config.set_fmt_table_cell_list_len.html  polars.Config.set_streaming_chunk_size.html  polars.Config.set_tbl_cell_alignment.html  polars.Config.set_tbl_cell_numeric_alignment.html  polars.Config.set_tbl_cols.html  polars.Config.set_tbl_column_data_type_inline.html  polars.Config.set_tbl_dataframe_shape_below.html  polars.Config.set_tbl_formatting.html  polars.Config.set_tbl_hide_column_data_types.html  polars.Config.set_tbl_hide_column_names.html  polars.Config.set_tbl_hide_dataframe_shape.html  polars.Config.set_tbl_rows.html  (+172 more)
api/rust/dev/polars/prelude/: struct.Arc.html
api/rust/dev/search.index/: 00e30779be13.js  00e7af6d0e8d.js  0151af3b2c68.js  018f69384fbc.js  01cd37eeb9f0.js  020802c33034.js  0214dc210f30.js  02279b752eca.js  0269b86ea881.js  027b2553d9b3.js  0282b6684990.js  02a011f291d9.js  02df434b8fe7.js  02ec6b9d63a5.js  0306a077468b.js  03137681de44.js  036938ffb924.js  0374f7ea6cf8.js  037afcb149e3.js  03c96140180a.js  03cf972b0a68.js  03e60465f2ec.js  03fbb36673f8.js  04548d44ae89.js  05113c034c66.js  0519cb5e8979.js  0529d2614cc9.js  052ca07f645a.js  052e53c5b0ef.js  0544b1a3f85b.js  0574eb6ca3b9.js  057824c71592.js  05d6355e9294.js  05f033d725fa.js  0645633d24ba.js  06b2f2b30ca4.js  06f8b3db5e0e.js  0711dabd35bd.js  0734b8416d22.js  073aa2e6f46e.js  (+791 more)
api/rust/dev/search.index/desc/: 99342a7bf14a.js
api/rust/dev/search.index/entry/: 0b432701ced1.js  39b71bdac5e8.js  5ef36b33ac01.js  79a97dbf5ead.js  bd4745424ff2.js  cdc33308722e.js
api/rust/dev/search.index/function/: 25b7a768d0e4.js  2748e31c0ca0.js  4a97e4862b8a.js
api/rust/dev/search.index/generic_inverted_index/: b69106518871.js
api/rust/dev/search.index/name/: 287232ce09c7.js
api/rust/dev/search.index/normalizedName/: 7d9267d07698.js
api/rust/dev/search.index/path/: de02b7f83e19.js
api/rust/dev/search.index/type/: 277882adc013.js  8085854e780e.js
crates/polars-streaming-adaptive/: Cargo.toml
crates/polars-streaming-adaptive/benches/: streaming_benchmark.rs
crates/polars-streaming-adaptive/src/: adaptive_reader.rs  chunk_strategy.rs  mmap_reader.rs  parallel_stream.rs
crates/polars-streaming-adaptive/src/sources/: config.rs  csv.rs  error.rs  mod.rs  traits.rs
crates/polars-timeseries/: Cargo.toml
crates/polars-timeseries/benches/: timeseries_benchmark.rs
crates/polars-timeseries/src/: error.rs  lib.rs  resample.rs  session.rs  twap.rs  vwap.rs
docs/: ADVANCED_ASYNC.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  DISTRIBUTED_GETTING_STARTED.md  DISTRIBUTED_IMPLEMENTATION_PLAN.md  FUNCTIONAL_PROGRAMMING_ADVANTAGES.md  MIGRATION_GUIDE.md  MODE_SELECTION_GUIDE.md  MULTI_MODE_IMPLEMENTATION_PLAN.md  OWNERSHIP_TRANSFER.md  PERFORMANCE_COMPARISON.md  README_DOCKER.md  README_OLD.md  RELEASE_NOTES.md  REST_EXEC_API.md  SERVERLESS_OPTIMIZATION.md  STREAMING_ADAPTIVE.md  UPSTREAM_PR_STRATEGY.md  WHEN_NOT_TO_USE.md  requirements.txt
docs/guides/: MIGRATION_GUIDE.md  QUICK_REFERENCE.md
docs/source/: architecture.md  conf.py  index.rst  lakehouse.md  storage.md
docs/source/releases/: v0.54.0-planned.md
docs/summaries/: ASYNC_FEATURES_SUMMARY.md  IMPLEMENTATION_ROADMAP.md  PHASE4_TIMESERIES_SUMMARY.md  PHASE_2_SUMMARY.md  POLAROID_PLANNING_SUMMARY.md
examples/: advanced_tokio.rs  benchmark_timeseries.py  test_timeseries.py  websocket_client.py  websocket_streaming.rs
notebooks/: adaptive_streaming_benchmarks.ipynb  polaroid_functional_programming.ipynb  polaroid_showcase.ipynb
polaroid-distributed/src/: cache.rs  coordinator.rs  error.rs  executor.rs  query_planner.rs
polaroid-grpc/: Cargo.toml  build.rs
polaroid-grpc/src/: error.rs  handle_provider.rs  handles.rs  http_api.rs  lib.rs  main.rs  optimizations.rs  service.rs  state_store.rs
polaroid-grpc/src/storage/: mod.rs
polaroid-python/: pyproject.toml
polaroid-python/polaroid/: __init__.py  async_client.py  client.py  config.py  polaroid_pb2.py  polaroid_pb2_grpc.py
polaroid-sources/: Cargo.toml
polaroid-sources/src/: connection_pool.rs  error.rs  grpc_stream.rs  lib.rs  rest.rs  traits.rs  websocket.rs
polarway-distributed/: Cargo.toml
polarway-distributed/src/: cache.rs  executor.rs  lib.rs
polarway-grpc/: Cargo.toml  build.rs
polarway-grpc/examples/: grpc_e2e_inproc.rs
polarway-grpc/src/: http_api.rs  lib.rs  service.rs
polarway-grpc/src/storage/: cache.rs  duckdb_backend.rs  parquet_backend.rs
polarway-grpc/tests/: grpc_service_e2e.rs
polarway-python/: README.md  generate_protos.sh  pyproject.toml
polarway-python/polaroid/: __init__.py  async_client.py  client.py  exceptions.py  polaroid_pb2.py  types.py
polarway-python/tests/: test_read_rest_api.py
polarway-sources/src/: connection_pool.rs  rate_limiter.rs  rest.rs  websocket.rs
proto/: polaroid.proto  polarway.proto
src/storage/: mod.rs
tools/: run_notebooks.py
(+1270 files in other folders)
