[package]
name = "polaroid-distributed"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
# Arrow and DataFusion
arrow = { version = "53.0", features = ["ipc", "json"] }
arrow-schema = "53.0"
datafusion = "42.0"

# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"

# gRPC
tonic = "0.12"
prost = "0.13"

# Distributed coordination
etcd-client = "0.14"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Caching
moka = { version = "0.12", features = ["future"] }

# Utilities
uuid = { version = "1.11", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
